[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/player_small.png" type="Texture" id=1]
[ext_resource path="res://assets/kenvector_future_thin.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/green_button05.png" type="Texture" id=3]
[ext_resource path="res://assets/green_button04.png" type="Texture" id=4]
[ext_resource path="res://ui/HUD.gd" type="Script" id=5]
[ext_resource path="res://assets/barHorizontal_green_mid 200.png" type="Texture" id=6]
[ext_resource path="res://assets/shield_gold.png" type="Texture" id=7]
[ext_resource path="res://assets/glassPanel_200.png" type="Texture" id=8]
[ext_resource path="res://assets/DroidSans.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://assets/green_button041.png" type="Texture" id=10]
[ext_resource path="res://assets/transparentDark12.png" type="Texture" id=11]
[ext_resource path="res://assets/shadedDark14.png" type="Texture" id=12]
[ext_resource path="res://assets/flatDark13.png" type="Texture" id=13]
[ext_resource path="res://assets/shadedDark12.png" type="Texture" id=14]
[ext_resource path="res://assets/flatDark133.png" type="Texture" id=15]
[ext_resource path="res://assets/shadedDark15.png" type="Texture" id=16]
[ext_resource path="res://assets/shadedDark13.png" type="Texture" id=17]
[ext_resource path="res://assets/flatDark11.png" type="Texture" id=18]
[ext_resource path="res://assets/red_button02.png" type="Texture" id=19]
[ext_resource path="res://assets/red_button01.png" type="Texture" id=20]
[ext_resource path="res://assets/red_button00.png" type="Texture" id=21]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 9 )

[node name="HUD" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
focus_mode = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 92.0

[node name="Sound" type="TextureButton" parent="MarginContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0.607843 )
margin_right = 86.0
margin_bottom = 72.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
toggle_mode = true
enabled_focus_mode = 0
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 16 )
expand = true
stretch_mode = 4

[node name="ScoreLabel" type="Label" parent="MarginContainer/HBoxContainer"]
margin_left = 90.0
margin_right = 379.0
margin_bottom = 72.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_left = 383.0
margin_right = 413.0
margin_bottom = 72.0
texture = ExtResource( 7 )

[node name="ShieldBar" type="TextureProgress" parent="MarginContainer/HBoxContainer"]
margin_left = 417.0
margin_right = 781.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.26
texture_over = ExtResource( 8 )
texture_progress = ExtResource( 6 )

[node name="LivesCounter" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 785.0
margin_right = 907.0
margin_bottom = 72.0

[node name="L1" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCounter"]
margin_right = 38.0
margin_bottom = 72.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="L2" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCounter"]
margin_left = 42.0
margin_right = 80.0
margin_bottom = 72.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="L3" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCounter"]
margin_left = 84.0
margin_right = 122.0
margin_bottom = 72.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="LiderBoard" type="TextureButton" parent="MarginContainer/HBoxContainer"]
pause_mode = 2
visible = false
modulate = Color( 1, 1, 1, 0.607843 )
margin_left = 847.0
margin_right = 913.0
margin_bottom = 72.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
enabled_focus_mode = 0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 15 )
expand = true
stretch_mode = 4

[node name="Pause" type="TextureButton" parent="MarginContainer/HBoxContainer"]
pause_mode = 2
modulate = Color( 1, 1, 1, 0.607843 )
margin_left = 911.0
margin_right = 984.0
margin_bottom = 72.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
enabled_focus_mode = 0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 13 )
expand = true
stretch_mode = 4

[node name="StartButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.5
margin_top = 40.0
margin_right = 124.5
margin_bottom = 104.794
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 10 )
expand = true

[node name="ReturnButton" type="TextureButton" parent="."]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.5
margin_top = -100.0
margin_right = 124.5
margin_bottom = -35.206
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 21 )
texture_hover = ExtResource( 19 )
expand = true

[node name="MessageLabel" type="Label" parent="."]
pause_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="MessagePause" type="Label" parent="."]
pause_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -289.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="toggled" from="MarginContainer/HBoxContainer/Sound" to="." method="_on_Sound_toggled"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/LiderBoard" to="." method="_on_LiderBoard_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Pause" to="." method="_on_Pause_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
